--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             padding: 20px;
             border-radius: 10px;
             text-align: center;
-            width: 800%;
+            width: 90%;
+            max-width: 600px;
         }
 
         .image-container {
@@ -49,6 +50,12 @@
         audio {
             margin-top: 15px;
         }
+
+        @media (max-width: 768px) {
+            .overlay-text h3, .overlay-text p, .overlay-text h4 {
+                font-size: 1rem;
+            }
+        }
     </style>
 </head>
 
@@ -56,44 +63,38 @@
 
     <!-- Banner -->
     <div class="container-fluid">
-        <div class="jumbotron img_banner_hpbd">
-            <div class="text-center text-danger bg-danger">
-                <h1>TO: BÉ IU</h1>
-            </div>
+        <div class="jumbotron img_banner_hpbd text-center text-danger bg-danger">
+            <h1>TO: BÉ IU</h1>
         </div>
     </div>
 
     <!-- Thẻ sinh nhật -->
     <div class="container">
-        <div class="row">
-            <div class="col-xs-4 col-md-4 col-sm-4">
-                <p style="padding-top: 5px"></p>
-            </div>
-            <div id="bond" class="col-xs-8 col-md-8 col-sm-8 text-center">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 text-center">
                 <img data-toggle="modal" data-target="#myModal"
-                    class="media-object img-responsive img-thumbnail bg-snow-tranparent-hidden"
-                    src="img/Winter happy birthday.jpg" alt="Birthday Image" style="height: 360px; cursor: pointer;">
+                    class="img-fluid img-thumbnail"
+                    src="img/Winter happy birthday.jpg" alt="Birthday Image" style="cursor: pointer;">
             </div>
         </div>
     </div>
 
     <!-- Modal hiển thị thiệp -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
 
                 <div class="modal-header">
+                    <h4 class="modal-title text-info" id="myModalLabel">Thiệp sinh nhật</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title text-info" id="myModalLabel">Thiệp sinh nhật</h4>
                 </div>
 
                 <div class="modal-body">
-
                     <!-- Ảnh chính có chữ overlay -->
                     <div class="image-container">
-                        <img src="img/Winter happy birthday.jpg" alt="Happy Birthday">
+                        <img src="img/Winter happy birthday.jpg" alt="Happy Birthday" class="img-fluid">
                         <div class="overlay-text">
                             <h3>Gửi: Bé Hương iu thương</h3>
                             <p>Chúc mừng sinh nhật em</p>
@@ -112,13 +113,13 @@
                     </div>
 
                     <!-- Ảnh phụ -->
-                    <div class="containeri text-center" style="margin-top: 20px;">
-                        <img class="img img-responsive" src="img/Untitled-2.jpg" alt="Ảnh trang trí">
+                    <div class="text-center mt-3">
+                        <img class="img-fluid" src="img/Untitled-2.jpg" alt="Ảnh trang trí">
                     </div>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
                     <button type="button" class="btn btn-primary">OK</button>
                 </div>
 
@@ -127,11 +128,10 @@
     </div>
 
     <!-- Footer -->
-    <footer class="container-fluid footer navbar-fixed-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-8"></div>
-                <div class="col-xs-4"></div>
+    <footer class="container-fluid mt-4">
+        <div class="row">
+            <div class="col text-center py-3">
+                <small>&copy; 2025 By Hoàng Thế Lực 💗</small>
             </div>
         </div>
     </footer>
@@ -143,5 +143,4 @@
     <script src="js/js01.js"></script>
 
 </body>
-
 </html>
